[package]
name = "rtrack"
version = "0.1.0"
authors = ["Sergey Kvetko <s_kvetko@wargaming.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "2.1.0"
config = "0.11.0"
clap = "2.33"
octocrab = "0.12"
url = "2.2.2"
git-url-parse = "0.3.1"
tokio = { version = "1", features = ["full"] }
prettytable-rs = "^0.8"
chrono = "0.4.19"
chrono-humanize = "0.2.1"
