[package]
name = "rtrack"
version = "1.0.0"
authors = ["h17liner"]
edition = "2021"


[dependencies]
clap = { version = "4", features = ["cargo"] }
config = "0"
serde = {version = "1.0", features = ["derive", "std"]}

shellexpand = "3.1.0"
octocrab = "0.32.0"
git-url-parse = "0.4.4"
tokio = { version = "1", features = ["rt", "macros"] }
prettytable-rs = "0.10.0"
chrono = "0.4.19"
chrono-humanize = "0.2.3"
colored = "2"

jemallocator = "0.5.4"

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
lto = true
